fix(dh): minor fix with translations

--- a/libs/dh/metering-point/feature-search/src/components/dh-create-metering-point.component.html
+++ b/libs/dh/metering-point/feature-search/src/components/dh-create-metering-point.component.html
@@ -197,7 +197,7 @@ limitations under the License.
 
         <watt-textarea-field
           [formControl]="addressControls.comment"
-          [label]="t('address.comment')"
+          [label]="t('address.commentLabel')"
         />
       </watt-card>
 
