fix(dh): remove dropdown options

--- a/libs/dh/metering-point/feature-search/src/components/dh-create-metering-point.component.html
+++ b/libs/dh/metering-point/feature-search/src/components/dh-create-metering-point.component.html
@@ -263,10 +263,7 @@ limitations under the License.
 
           <watt-dropdown
             [formControl]="powerPlantControls.assetType"
-            [options]="[
-              { displayValue: 'Vindmølle', value: 'WIND_TURBINE' },
-              { displayValue: 'Solcelle', value: 'SOLAR_PANEL' },
-            ]"
+            [options]="[]"
             [showResetOption]="false"
             [label]="t('powerPlant.assetType')"
           />
