Split charge links into tariff-subscriptions and fees

--- a/libs/watt/package/segmented-buttons/watt-segmented-buttons.component.scss
+++ b/libs/watt/package/segmented-buttons/watt-segmented-buttons.component.scss
@@ -30,7 +30,7 @@
       border-color: var(--watt-color-neutral-grey-700) !important;
 
       button {
-        width: 6.5rem;
+        min-width: 6.5rem;
 
         span {
           font-size: 0.875rem;
