Added new variant

--- a/libs/watt/package/button/+storybook/storybook-button-overview.component.html
+++ b/libs/watt/package/button/+storybook/storybook-button-overview.component.html
@@ -78,3 +78,11 @@ limitations under the License.
   <watt-button variant="icon" icon="plus">Enabled</watt-button>
   <watt-button variant="icon" icon="plus" [disabled]="true">Disabled</watt-button>
 </div>
+
+<h2>Selection</h2>
+
+<p>Selection buttons allow users to take actions and make choices with a single tap.</p>
+
+<div class="content-grid">
+  <watt-button variant="selection" icon="right">Enabled</watt-button>
+</div>
