--- a/libs/watt/package/button/watt-button.component.scss
+++ b/libs/watt/package/button/watt-button.component.scss
@@ -142,18 +142,24 @@ watt-button {
         background-color: var(--watt-color-neutral-grey-100);
       }
 
-      .content-wrapper {
-        width: 100%;
-        display: flex;
-      }
-
-      watt-icon {
-        order: 2;
-        margin-left: auto;
-      }
-
       &.mat-mdc-button {
         height: 56px; // Magic UX normal height
+
+        .mdc-button__label {
+          justify-content: flex-end;
+          align-items: start;
+          width: 100%;
+
+          .content-wrapper {
+            width: 100%;
+            display: flex;
+
+            watt-icon {
+              order: 2;
+              margin-left: auto;
+            }
+          }
+        }
       }
     }
   }
@@ -183,27 +189,6 @@ watt-button {
     }
   }
 
-  &.watt-button-align-text--start {
-    .mdc-button__label {
-      justify-content: flex-start;
-      align-items: start;
-    }
-  }
-
-  &.watt-button-align-text--center {
-    .mdc-button__label {
-      justify-content: center;
-      align-items: start;
-    }
-  }
-
-  &.watt-button-align-text--end {
-    .mdc-button__label {
-      justify-content: flex-end;
-      align-items: start;
-    }
-  }
-
   .mdc-button {
     @include watt.typography-font-weight("semi-bold");
     @include watt.typography-font-size("m");
@@ -227,7 +212,8 @@ watt-button {
 
     .mdc-button__label {
       display: flex;
-      width: 100%;
+      justify-content: center;
+      align-items: center;
 
       .content-wrapper {
         display: flex;
