chore: changes download button type to secondary and adds gap to table action button

--- a/libs/dh/wholesale/feature-calculations/src/lib/table/table.component.html
+++ b/libs/dh/wholesale/feature-calculations/src/lib/table/table.component.html
@@ -38,16 +38,18 @@ limitations under the License.
   </watt-data-filters>
 
   <watt-data-actions>
-    <watt-button variant="secondary" data-testid="newCalculation.add" [routerLink]="['new']">
-      {{ t("new") }}
-    </watt-button>
-    <watt-button
-      *dhPermissionRequired="['dh2-bridge:import']"
-      variant="secondary"
-      [wattMenuTriggerFor]="menu"
-    >
-      <watt-icon name="moreVertical" />
-    </watt-button>
+    <vater-stack direction="row" gap="m">
+      <watt-button variant="secondary" data-testid="newCalculation.add" [routerLink]="['new']">
+        {{ t("new") }}
+      </watt-button>
+      <watt-button
+        *dhPermissionRequired="['dh2-bridge:import']"
+        variant="secondary"
+        [wattMenuTriggerFor]="menu"
+      >
+        <watt-icon name="moreVertical" />
+      </watt-button>
+    </vater-stack>
   </watt-data-actions>
 
   <watt-table
