chore: removes gap from data table and redundant headers

--- a/libs/dh/esett/feature-balance-responsible/src/lib/dh-balance-responsible.component.html
+++ b/libs/dh/esett/feature-balance-responsible/src/lib/dh-balance-responsible.component.html
@@ -19,11 +19,11 @@ limitations under the License.
   vater
   inset="ml"
   [enableSearch]="false"
+  [enableCount]="false"
   [error]="dataSource.error"
   [ready]="dataSource.called"
   #wattDataTable
 >
-  <h3>{{ t("tabHeading") }}</h3>
 
   <watt-data-actions>
     <vater-stack direction="row" gap="s">
