--- a/libs/dh/esett/feature-metering-gridarea-imbalance/src/components/metering-gridarea-imbalance.component.html
+++ b/libs/dh/esett/feature-metering-gridarea-imbalance/src/components/metering-gridarea-imbalance.component.html
@@ -18,11 +18,11 @@ limitations under the License.
   vater
   inset="ml"
   *transloco="let t; prefix: 'eSett.meteringGridAreaImbalance'"
+  [enableCount]="false"
   [searchLabel]="t('searchLabel')"
   [error]="dataSource.error"
   [ready]="dataSource.called"
 >
-  <h3>{{ t("tabHeading") }}</h3>
 
   <watt-data-actions>
     <watt-button icon="download" variant="text" (click)="download()" [loading]="query.loading()">{{
