chore: updates click functionality and replaces watt-button with new download button

--- a/libs/dh/grid-areas/src/components/grid-areas.component.html
+++ b/libs/dh/grid-areas/src/components/grid-areas.component.html
@@ -49,9 +49,7 @@ limitations under the License.
   </watt-data-filters>
 
   <watt-data-actions>
-    <watt-button icon="download" variant="secondary" (click)="download()">{{
-      "shared.download" | transloco
-    }}</watt-button>
+    <dh-download-button (clicked)="download()" />
   </watt-data-actions>
 
   <watt-table
