--- a/libs/dh/market-participant/feature-market-participant/src/components/details/balance-responsible-relation-tab/dh-balance-responsible-relation-tab.component.html
+++ b/libs/dh/market-participant/feature-market-participant/src/components/details/balance-responsible-relation-tab/dh-balance-responsible-relation-tab.component.html
@@ -28,9 +28,7 @@ limitations under the License.
       (filtersChanges)="store.updateFilters($event)"
     />
 
-    <watt-button icon="download" variant="text" (click)="store.download()">{{
-      "shared.download" | transloco
-    }}</watt-button>
+    <dh-download-button (clicked)="store.download()" />
   </vater-stack>
 
   @if (store.isLoading()) {
