--- a/libs/dh/wholesale/feature-calculations/src/lib/table/table.component.html
+++ b/libs/dh/wholesale/feature-calculations/src/lib/table/table.component.html
@@ -47,6 +47,7 @@ limitations under the License.
         variant="secondary"
         [wattMenuTriggerFor]="menu"
       >
+        {{ t("actionsButton") }}
         <watt-icon name="moreVertical" />
       </watt-button>
     </vater-stack>
